More word based features

--- a/variable_creation.ipynb
+++ b/variable_creation.ipynb
@@ -746,6 +746,22 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test = \"The quick brown fox jumps over the lazy dog. The quick brown fox was very quick.\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
    "outputs": [
