Added more structural features

--- a/variable_creation.ipynb
+++ b/variable_creation.ipynb
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +208,7 @@
     "from nltk.probability import FreqDist\n",
     "import numpy as np\n",
     "import nltk\n",
-    "from nltk.tokenize import sent_tokenize\n",
+    "from nltk.tokenize import sent_tokenize, word_tokenize\n",
     "import statistics\n",
     "\n",
     "\n",
@@ -359,8 +359,7 @@
     "\n",
     "def words_sentences(text):\n",
     "    sents = sent_tokenize(text)\n",
-    "    #not done\n",
-    "    return\n",
+    "    return statistics.mean([len(word_tokenize(sentence)) for sentence in sents])\n",
     "    \n",
     "\n",
     "\n",
@@ -370,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -418,6 +417,9 @@
     "    features['number_sentences'] = dataframe[text_column].apply(sentences)\n",
     "    features['number_paragraphs'] = dataframe[text_column].apply(paragraphs)\n",
     "    features['sentences_per_paragraph'] = dataframe[text_column].apply(sentence_paragraph)\n",
+    "    features['word_per_paragraph'] = dataframe[text_column].apply(words_paragraph)\n",
+    "    features['character_per_paragraph'] = dataframe[text_column].apply(chars_paragraph)\n",
+    "    features['word_per_sentence'] = dataframe[text_column].apply(words_sentences)\n",
     "\n",
     "\n",
     "    return features"
@@ -425,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [
     {
@@ -460,9 +462,6 @@
        "      <th>c_frequency</th>\n",
        "      <th>d_frequency</th>\n",
        "      <th>...</th>\n",
-       "      <th>;_frequency</th>\n",
-       "      <th>\\?_frequency</th>\n",
-       "      <th>\\?{2,}_frequency</th>\n",
        "      <th>!_frequency</th>\n",
        "      <th>!{2,}_frequency</th>\n",
        "      <th>\\.{3}_frequency</th>\n",
@@ -470,6 +469,9 @@
        "      <th>number_sentences</th>\n",
        "      <th>number_paragraphs</th>\n",
        "      <th>sentences_per_paragraph</th>\n",
+       "      <th>word_per_paragraph</th>\n",
+       "      <th>character_per_paragraph</th>\n",
+       "      <th>word_per_sentence</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -486,9 +488,6 @@
        "      <td>0.042857</td>\n",
        "      <td>0.028571</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.0</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
@@ -496,6 +495,9 @@
        "      <td>2</td>\n",
        "      <td>1</td>\n",
        "      <td>2</td>\n",
+       "      <td>13.666667</td>\n",
+       "      <td>70</td>\n",
+       "      <td>15.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -510,9 +512,6 @@
        "      <td>0.014184</td>\n",
        "      <td>0.028369</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.007092</td>\n",
-       "      <td>0.0</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.007092</td>\n",
@@ -520,6 +519,9 @@
        "      <td>2</td>\n",
        "      <td>2</td>\n",
        "      <td>2</td>\n",
+       "      <td>13.666667</td>\n",
+       "      <td>70</td>\n",
+       "      <td>14.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -534,9 +536,6 @@
        "      <td>0.042254</td>\n",
        "      <td>0.028169</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.0</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
@@ -544,6 +543,9 @@
        "      <td>2</td>\n",
        "      <td>1</td>\n",
        "      <td>2</td>\n",
+       "      <td>13.666667</td>\n",
+       "      <td>70</td>\n",
+       "      <td>12.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -558,9 +560,6 @@
        "      <td>0.042254</td>\n",
        "      <td>0.021127</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.0</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
@@ -568,6 +567,9 @@
        "      <td>2</td>\n",
        "      <td>1</td>\n",
        "      <td>2</td>\n",
+       "      <td>13.666667</td>\n",
+       "      <td>70</td>\n",
+       "      <td>12.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -582,9 +584,6 @@
        "      <td>0.008130</td>\n",
        "      <td>0.008130</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.008130</td>\n",
-       "      <td>0.0</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
@@ -592,6 +591,9 @@
        "      <td>2</td>\n",
        "      <td>1</td>\n",
        "      <td>2</td>\n",
+       "      <td>13.666667</td>\n",
+       "      <td>70</td>\n",
+       "      <td>14.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -630,9 +632,6 @@
        "      <td>0.027397</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.0</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
@@ -640,6 +639,9 @@
        "      <td>2</td>\n",
        "      <td>1</td>\n",
        "      <td>2</td>\n",
+       "      <td>13.666667</td>\n",
+       "      <td>70</td>\n",
+       "      <td>6.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14162</th>\n",
@@ -654,9 +656,6 @@
        "      <td>0.025641</td>\n",
        "      <td>0.012821</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.0</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
@@ -664,6 +663,9 @@
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>2</td>\n",
+       "      <td>13.666667</td>\n",
+       "      <td>70</td>\n",
+       "      <td>14.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14163</th>\n",
@@ -678,9 +680,6 @@
        "      <td>0.014706</td>\n",
        "      <td>0.014706</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.0</td>\n",
        "      <td>0.044118</td>\n",
        "      <td>0.014706</td>\n",
        "      <td>0.000000</td>\n",
@@ -688,6 +687,9 @@
        "      <td>2</td>\n",
        "      <td>1</td>\n",
        "      <td>2</td>\n",
+       "      <td>13.666667</td>\n",
+       "      <td>70</td>\n",
+       "      <td>8.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14164</th>\n",
@@ -702,9 +704,6 @@
        "      <td>0.040323</td>\n",
        "      <td>0.008065</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.0</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
@@ -712,6 +711,9 @@
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>2</td>\n",
+       "      <td>13.666667</td>\n",
+       "      <td>70</td>\n",
+       "      <td>18.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14165</th>\n",
@@ -726,9 +728,6 @@
        "      <td>0.029851</td>\n",
        "      <td>0.014925</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.0</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
@@ -736,10 +735,13 @@
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>2</td>\n",
+       "      <td>13.666667</td>\n",
+       "      <td>70</td>\n",
+       "      <td>11.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>14166 rows × 79 columns</p>\n",
+       "<p>14166 rows × 82 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -769,62 +771,62 @@
        "14164          0.129032        0.016129     0.080645     0.024194   \n",
        "14165          0.134328        0.029851     0.029851     0.029851   \n",
        "\n",
-       "       c_frequency  d_frequency  ...  ;_frequency  \\?_frequency  \\\n",
-       "0         0.042857     0.028571  ...          0.0      0.000000   \n",
-       "1         0.014184     0.028369  ...          0.0      0.007092   \n",
-       "2         0.042254     0.028169  ...          0.0      0.000000   \n",
-       "3         0.042254     0.021127  ...          0.0      0.000000   \n",
-       "4         0.008130     0.008130  ...          0.0      0.008130   \n",
-       "...            ...          ...  ...          ...           ...   \n",
-       "14161     0.027397     0.000000  ...          0.0      0.000000   \n",
-       "14162     0.025641     0.012821  ...          0.0      0.000000   \n",
-       "14163     0.014706     0.014706  ...          0.0      0.000000   \n",
-       "14164     0.040323     0.008065  ...          0.0      0.000000   \n",
-       "14165     0.029851     0.014925  ...          0.0      0.000000   \n",
+       "       c_frequency  d_frequency  ...  !_frequency  !{2,}_frequency  \\\n",
+       "0         0.042857     0.028571  ...     0.000000         0.000000   \n",
+       "1         0.014184     0.028369  ...     0.000000         0.000000   \n",
+       "2         0.042254     0.028169  ...     0.000000         0.000000   \n",
+       "3         0.042254     0.021127  ...     0.000000         0.000000   \n",
+       "4         0.008130     0.008130  ...     0.000000         0.000000   \n",
+       "...            ...          ...  ...          ...              ...   \n",
+       "14161     0.027397     0.000000  ...     0.000000         0.000000   \n",
+       "14162     0.025641     0.012821  ...     0.000000         0.000000   \n",
+       "14163     0.014706     0.014706  ...     0.044118         0.014706   \n",
+       "14164     0.040323     0.008065  ...     0.000000         0.000000   \n",
+       "14165     0.029851     0.014925  ...     0.000000         0.000000   \n",
        "\n",
-       "       \\?{2,}_frequency  !_frequency  !{2,}_frequency  \\.{3}_frequency  \\\n",
-       "0                   0.0     0.000000         0.000000         0.000000   \n",
-       "1                   0.0     0.000000         0.000000         0.007092   \n",
-       "2                   0.0     0.000000         0.000000         0.000000   \n",
-       "3                   0.0     0.000000         0.000000         0.000000   \n",
-       "4                   0.0     0.000000         0.000000         0.000000   \n",
-       "...                 ...          ...              ...              ...   \n",
-       "14161               0.0     0.000000         0.000000         0.000000   \n",
-       "14162               0.0     0.000000         0.000000         0.000000   \n",
-       "14163               0.0     0.044118         0.014706         0.000000   \n",
-       "14164               0.0     0.000000         0.000000         0.000000   \n",
-       "14165               0.0     0.000000         0.000000         0.000000   \n",
+       "       \\.{3}_frequency  number_lines  number_sentences  number_paragraphs  \\\n",
+       "0             0.000000             1                 2                  1   \n",
+       "1             0.007092             4                 2                  2   \n",
+       "2             0.000000             1                 2                  1   \n",
+       "3             0.000000             1                 2                  1   \n",
+       "4             0.000000             1                 2                  1   \n",
+       "...                ...           ...               ...                ...   \n",
+       "14161         0.000000             1                 2                  1   \n",
+       "14162         0.000000             1                 1                  1   \n",
+       "14163         0.000000             1                 2                  1   \n",
+       "14164         0.000000             1                 1                  1   \n",
+       "14165         0.000000             1                 1                  1   \n",
        "\n",
-       "       number_lines  number_sentences  number_paragraphs  \\\n",
-       "0                 1                 2                  1   \n",
-       "1                 4                 2                  2   \n",
-       "2                 1                 2                  1   \n",
-       "3                 1                 2                  1   \n",
-       "4                 1                 2                  1   \n",
-       "...             ...               ...                ...   \n",
-       "14161             1                 2                  1   \n",
-       "14162             1                 1                  1   \n",
-       "14163             1                 2                  1   \n",
-       "14164             1                 1                  1   \n",
-       "14165             1                 1                  1   \n",
+       "       sentences_per_paragraph  word_per_paragraph  character_per_paragraph  \\\n",
+       "0                            2           13.666667                       70   \n",
+       "1                            2           13.666667                       70   \n",
+       "2                            2           13.666667                       70   \n",
+       "3                            2           13.666667                       70   \n",
+       "4                            2           13.666667                       70   \n",
+       "...                        ...                 ...                      ...   \n",
+       "14161                        2           13.666667                       70   \n",
+       "14162                        2           13.666667                       70   \n",
+       "14163                        2           13.666667                       70   \n",
+       "14164                        2           13.666667                       70   \n",
+       "14165                        2           13.666667                       70   \n",
        "\n",
-       "       sentences_per_paragraph  \n",
-       "0                            2  \n",
-       "1                            2  \n",
-       "2                            2  \n",
-       "3                            2  \n",
-       "4                            2  \n",
-       "...                        ...  \n",
-       "14161                        2  \n",
-       "14162                        2  \n",
-       "14163                        2  \n",
-       "14164                        2  \n",
-       "14165                        2  \n",
+       "       word_per_sentence  \n",
+       "0                   15.0  \n",
+       "1                   14.0  \n",
+       "2                   12.0  \n",
+       "3                   12.5  \n",
+       "4                   14.5  \n",
+       "...                  ...  \n",
+       "14161                6.0  \n",
+       "14162               14.0  \n",
+       "14163                8.0  \n",
+       "14164               18.0  \n",
+       "14165               11.0  \n",
        "\n",
-       "[14166 rows x 79 columns]"
+       "[14166 rows x 82 columns]"
       ]
      },
-     "execution_count": 144,
+     "execution_count": 165,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -885,16 +887,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['This is the first line.', 'This is the first sentence of the second line.', 'This is the second sentence of the second line.', 'This is the first line of the second paragraph.', 'This is the third paragraph.', 'It has one line.']\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "[118, 47, 45]"
+       "7.833333333333333"
       ]
      },
-     "execution_count": 147,
+     "execution_count": 156,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -906,8 +915,9 @@
     "This is the first line of the second paragraph.\n",
     "\n",
     "This is the third paragraph. It has one line.\"\"\"\n",
-    "pars = [par for par in test.split('\\n\\n') if par.strip()]\n",
-    "[len(par) for par in pars]"
+    "sent = sent_tokenize(test)\n",
+    "print(sent)\n",
+    "statistics.mean([len(word_tokenize(sentence)) for sentence in sent])"
    ]
   },
   {
